k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opportunex
  labels:
    name: opportunex
    environment: production
